2004-10-22  Atsushi Enomoto <atsushi@ximian.com>

	* XPathEditableDocument.cs :
	  Now it implements updated version of .NET 2.0.
	  .ctor() should accept XmlNode, instead of XmlDocument.

2004-10-09  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : should be NET_2_0.

2004-10-08  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : IsDefault considers IXmlSchemaInfo
	  (it is anyways not implemented as yet.)

2004-10-05  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : Actually all other kind of nodes than
	  Element and Root must be treated as "start node only" as well as
	  attributes and namespaces.

2004-10-05  Atsushi Enomoto <atsushi@ximian.com>

	* XPathDocument2Editable.cs : for WriteAttributes(), use
	  CreateAttributesWriter() that creates attribute tree XmlWriter.
	* XPathNavigatorReader.cs : the reader was missing attributes when
	  it is created with an element node that has attriibutes.

2004-10-04  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : It can reject attribute and namespace
	  nodes as its input (It is used only for WriteNode(), InsertBefore()
	  and so on, which are not intended to be used with attribute nodes).
	  On Initial state, it was Element that should check IsEmptyElement,
	  and Root should just go to the first child node.

2004-10-04  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : When the reader's root node is not of type
	  Root, it incorrectly skipped the node itself.

2004-09-06  Atsushi Enomoto <atsushi@ximian.com>

	* XPathDocument2.cs, XPathDocument2Editable.cs:
	  Redesigned API. Child node list should not be required (it also
	  harms performance). Reduced extraneous methods for XPathNavigator
	  / XPathEditableNavigator implementation support.
	* XPathEditableDocument.cs : event registration was missing (due to
	  XPathDocument changes, it might not be required anymore though).
	* XPathNavigatorReader.cs :